--- a/templates/admin/post/index.html.twig
+++ b/templates/admin/post/index.html.twig
@@ -35,7 +35,11 @@
                     <td>{{ post.user.email}}</td>
                     <td>{{ post.category.name}}</td>
                     <td>{{ post.createdAt | date('d:m:Y H:i') }}</td>
-                    <td>{{ post.active }}</td>
+                    <td>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" name="active" id="customSwitch{{ post.id }}" data-id="{{ post.id }}" {{ post.active ? 'checked' : null}}>
+                        </div>
+                    </td>
                     <td class="text-end">
                         <a href="{{ path('admin_post_edit', { id: post.id }) }}" class="btn-sm btn-warning btn active rounded" role="button" aria-pressed="true">Modifier</a>
                         <a href="{{ path('admin_post_delete', { id: post.id }) }}" class="btn-sm btn-danger btn active rounded" role="button" aria-pressed="true">X</a>
@@ -45,4 +49,20 @@
             </tbody>
         </table>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+<script>
+    window.onload = () => {
+        let activate = document.querySelectorAll("[type=checkbox]")
+        for(let button of activate) {
+            button.addEventListener("click", function(){
+                let xmlhttp = new XMLHttpRequest
+                xmlhttp.open("get", `/admin/post/activate/${this.dataset.id}`)
+                xmlhttp.send()
+            })
+        }
+    }
+</script>
 {% endblock %}
