--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,6 +1,17 @@
 {% extends 'clean.html.twig' %}
 
-{% block title %}Modifier votre mot de passe{% endblock %}
+{% block title %}Modification du mot de passe{% endblock %}
+{% block subTitle %}
+    Veuillez renseigner votre adresse e-mail afin de pouvoir réinitialiser votre mot de passe
+{% endblock %}
+{% block meta %}
+<small class="text-warning">
+    Vous recevrez un email contenant un lien afin de pouvoir modifier votre mot de passe
+</small>
+{% endblock %}
+{% block bg %}
+    https://f.hellowork.com/blogdumoderateur/2019/03/Mot-de-passe-securite-taiwan.jpg
+{% endblock %}
 
 
 {% block body %}
@@ -11,13 +22,7 @@
 
         {{ form_start(requestForm) }}
             {{ form_row(requestForm.email) }}
-            <div>
-                <small>
-                    Enter your email address and we we will send you a
-                    link to reset your password.
-                </small>
-            </div>
-            <div class="mt-3 mb-5"><button class="btn btn-primary">Send password reset email</button></div>
+            <div class="mt-3 mb-5"><button class="btn btn-primary">M'envoyer le lien par mail</button></div>
         {{ form_end(requestForm) }}
     </div>
 {% endblock %}
