--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,9 +12,7 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         <div class="my-2">
-            {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
-            }) }}
+            {{ form_row(registrationForm.plainPassword) }}
         </div>
         {{ form_row(registrationForm.agreeTerms) }}
 
