--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,13 +1,14 @@
 {% extends 'clean.html.twig' %}
 
 {% block title %}Modification du mot de passe{% endblock %}
+{% block subTitle %}Veuillez insérer votre nouveau mot de passe{% endblock %}
 
 {% block body %}
 
     <div class="container mt-2 w-25">
         {{ form_start(resetForm) }}
             {{ form_row(resetForm.plainPassword) }}
-            <button class="btn btn-primary">Reset password</button>
+            <button class="btn btn-primary">Modifier mon mot de passe</button>
         {{ form_end(resetForm) }}
     </div>
 {% endblock %}
