--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,44 +2,47 @@
 
 {% block title %}Connexion{% endblock %}
 {% block subTitle %}
-    Renseigner vos identifiants
+    Merci de renseigner vos identifiants
 {% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
+    <form method="post">
+        {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+        {% endif %}
 
-    {% if app.user %}
+        {% if app.user %}
         <div class="mb-3">
-            Vous êtes enregistré en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
+            Vous êtes enregistré en tant que
+            {{ app.user.username }},
+            <a href="{{ path('app_logout') }}">Se déconnecter</a>
         </div>
-    {% endif %}
+        {% endif %}
 
-    <div class="container w-25 mb-5">
-        <label for="inputEmail">Courriel</label>
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
-        <label for="inputPassword">Mot de passe</label>
-        <input type="password" name="password" id="inputPassword" class="form-control mb-3" autocomplete="current-password" required>
-        <div class="mt-3">
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        <div class="container w-25 mb-5">
+            <label for="inputEmail">Courriel</label>
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required="required" autofocus="autofocus">
+            <label for="inputPassword">Mot de passe</label>
+            <input type="password" name="password" id="inputPassword" class="form-control mb-3" autocomplete="current-password" required="required">
+            <div class="mt-3">
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+            </div>
+
+            {# See https://symfony.com/doc/current/security/remember_me.html #}
+
+            {# <div class="checkbox mb-3">
+                <label>
+                <input type="checkbox" name="_remember_me">
+                Se souvenir de moi
+                </label>
+            </div> #}
+
+            <button class="btn btn-lg btn-primary" type="submit">
+                Connexion
+            </button>
+            <aside class="mt-2">
+                <a href="{{ path('app_forgot_password_request') }}" class="fs-6">Mot de passe oublié ?</a>
+            </aside>
         </div>
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Connexion
-    </button>
-    </div>
-</form>
+    </form>
 {% endblock %}
