--- a/templates/common/_flash.html.twig
+++ b/templates/common/_flash.html.twig
@@ -1,4 +1,4 @@
-<main class="mb-2">
+<main class="mb-2" style="display: block" id="flash-container">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7 text-center">
@@ -12,3 +12,12 @@
         </div>
     </div>
 </main>
+
+{% block javascript %}
+    <script>
+        const flashDiv = document.getElementById('flash-container')
+        setTimeout(function(){
+            flashDiv.style.display = "none"
+            }, 3000);
+    </script>
+{% endblock %}
