--- a/public/sbadmin/css/styles.css
+++ b/public/sbadmin/css/styles.css
@@ -61,6 +61,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+#post>textarea {
+  width: 100%;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
